Migrated to python3 for coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ jdk:
 dist: trusty
 
 before_install:
-- pip install --user codecov
+- pyenv global system 3.6
+- pip3 install --user codecov
 script:
 - mvn test
 after_success:
