--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,9 +40,14 @@ management:
   endpoint:
     health:
       enabled: true
-      show-details: always
+      show-details: when_authorized
     info:
       enabled: true
   health:
     mail:
       enabled: false
+  info:
+    git:
+      mode: full
+    defaults:
+      enabled: true
