--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>org.surfnet</groupId>
     <artifactId>student-mobility-home-institution-mock</artifactId>
-   <version>0.1.0</version>
+    <version>0.2.0-SNAPSHOT</version>
     <name>home-institution-mock</name>
     <description>home-institution-mock</description>
 
