--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>org.surfnet</groupId>
     <artifactId>student-mobility-home-institution-mock</artifactId>
-    <version>0.2.1-SNAPSHOT</version>
+    <version>0.2.11</version>
     <name>home-institution-mock</name>
     <description>home-institution-mock</description>
 
