Fix ssl issues when connecting from inside container

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,3 +1,4 @@
 FROM eclipse-temurin:8-jdk-alpine
+RUN apk --update upgrade && apk add openssl openssl-dev ca-certificates libgcc && update-ca-certificates
 COPY target/*.jar app.jar
 ENTRYPOINT ["java","-jar","/app.jar"]
