Trace log level home institution mock

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ logging:
   level:
     root: warn
     home: debug
-    org.springframework: info
+    org.springframework: trace
 
 delay:
   enabled: true
