Trace spring security

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,7 @@ logging:
     root: warn
     home: debug
     org.springframework: info
+    org.springframework.security: trace
 
 delay:
   enabled: true
