--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,6 @@
     <version>0.3.1-SNAPSHOT</version>
     <name>home-institution-mock</name>
     <description>home-institution-mock</description>
-    <properties>
-        <java.version>21</java.version>
-        <maven.compiler.target>21</maven.compiler.target>
-        <maven.compiler.source>21</maven.compiler.source>
-    </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -119,15 +114,11 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
                 <configuration>
-                    <release>21</release>
+                    <release>8</release>
                 </configuration>
             </plugin>
             <plugin>
@@ -146,7 +137,7 @@
                                     <version>3.8.4</version>
                                 </requireMavenVersion>
                                 <requireJavaVersion>
-                                    <version>21</version>
+                                    <version>[1.8.0-0,1.8.0-500]</version>
                                 </requireJavaVersion>
                             </rules>
                         </configuration>
